Commented out Book Your Stay button till it is fixed.

--- a/about.html
+++ b/about.html
@@ -23,9 +23,9 @@
       <span class="toplinkspan"><a class="pagelink" href=
       "/">Home</a> <a class="pagelink" href="/localarea">Local
       Area</a> <a class="pagelink" href=
-      "/reviews">Reviews</a><a href=
-      "https://via.eviivo.com/ranscombetq7" class="pagelink">Book
-      your stay</a></span>
+      "/reviews">Reviews</a>
+	  <!--<a href="https://via.eviivo.com/ranscombetq7" class="pagelink">Book your stay</a>-->
+	  </span>
     </div>
     <div class="title">
       <a class="homelink" href="/"><span class=
