--- a/reviews.html
+++ b/reviews.html
@@ -21,9 +21,9 @@
     <div class="toplinks">
       <span class="toplinkspan"><a class="pagelink" href=
       "/">Home</a> <a class="pagelink" href="/localarea">Local
-      Area</a> <a class="pagelink" href="/about">About</a> <a href=
-      "https://via.eviivo.com/ranscombetq7" class="pagelink">Book
-      your stay</a></span>
+      Area</a> <a class="pagelink" href="/about">About</a>
+	  <!--<a href="https://via.eviivo.com/ranscombetq7" class="pagelink">Book your stay</a>-->
+	  </span>
     </div>
     <div class="title">
       <a class="homelink" href="/"><span class=
