--- a/localarea.html
+++ b/localarea.html
@@ -23,7 +23,7 @@
       <span class="toplinkspan"><a class="pagelink" href=
       "/">Home</a> <a class="pagelink" href="/reviews">Reviews</a>
       <a class="pagelink" href="/about">About</a>
-	  <!--<a href="https://via.eviivo.com/ranscombetq7" class="pagelink">Book your stay</a>-->
+	  <a href="https://via.eviivo.com/chapeltq7" class="pagelink">Book your stay</a>
 	  </span>
     </div>
     <div class="title">
