Changes font on Booking.com endorsement on home page, and tweak to directions.

--- a/about.html
+++ b/about.html
@@ -66,27 +66,27 @@
     <h1>Amanda's directions</h1>
     <p>I can't express enough how it's really best not to put the
     postcode in the sat nav as it will send you cross country
-    through our tiny narrow lanes from the A38 and then again which
+    through our tiny narrow lanes from the A38, which
     is about 20 miles and can be very challenging! If you stick to
     the main roads I’m directing below, it takes no longer and is a
     much easier journey.</p>
-    <p>M5 then A38 Plymouth direction. From A38 Take the
+    <p>M5 then A38 Plymouth direction. From A38 take the
     Dartington/Kingsbridge/Salcombe exit to Totnes Town. As you
     approach Totnes Town you will see the turning at the first
     traffic lights a sign to Kingsbridge. It's approx 12 miles to
-    Kingsbridge. Again, don’t sat nav Kingsbridge if you do it will
+    Kingsbridge. Again, don’t sat nav Kingsbridge; if you do it will
     try to throw you off into the green lanes and the wilderness,
     so best to stay on the main road and get into Kingsbridge!</p>
     <p>Again no sat nav as you’ll end up going a really narrow
     route that also is by the school and if it’s that time, it’s
     chaos!</p>
     <p>From Kingsbridge follow signs to Dartmouth direction. That
-    takes you down the town towards the Quay still following signs
+    takes you down the town towards the Quay, still following signs
     to Dartmouth over the roundabout at the bottom of town with the
     estuary on your right.</p>
     <p>After mile or so, you come to a stone arched bridge and
     immediately before it, turn left, the estuary still on your
-    right still. Stay on that lane for approx 1.5 miles, it bends
+    right. Stay on that lane for approx 1.5 miles, it bends
     and turns but just stick with it!!! Eventually after a sharp
     right bend you see a big stone farm on the right, then carry on
     until you see a blue cottage on left (nearly there!) after
