--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       "titlespan">Ranscombe Holiday Cottage</span></a>
     </div>
 	<div class="exceptionalDiv">
-			<span class="exceptionalSpan">Rated "EXCEPTIONAL"<br>10 out of 10 on Booking.com</span>
+			<span class="exceptionalSpan">Rated "Exceptional"<br>10 out of 10 on Booking.com</span>
 		</div>
   </div>
   <div id="topgap"></div>
