Fixed grammar mistake and added image.

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
   </div>
   <div id="topgap"></div>
   <div class="blurb" id="mainpara">
-    <p>Ranscombe Holiday Cottage is a luxurious self contained,
+    <p>Ranscombe Holiday Cottage is a luxurious, self contained,
     self-catering property overlooking the beautiful communal
-    gardens, pond area and orchards of The Manor with stunning
+    gardens, pond area and orchards of The Manor, with stunning
 	countryside beyond.</p>
     <div id="embed">
 		Loading video...
