--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       "/localarea">Local Area</a> <a class="pagelink" href=
       "/reviews">Reviews</a> <a href="/about" class=
       "pagelink">About</a>
+	  <a href="https://ranscombe-manor.com" class="pagelink">Ranscombe Manor</a>
 	  <a href="https://via.eviivo.com/chapeltq7" class="pagelink">Book your stay</a>
 	  </span>
     </div>
