Added webm version of video.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     self-catering property overlooking the beautiful communal
     gardens, pond area and orchards of The Manor, with stunning
     countryside beyond.</p><video width="100%" controls=
-    ""><source src="droneview.mp4" type="video/mp4"></video>
+    ""><source src="droneview.webm" type="video/webm"></video>
     <p>With its large open plan living room and conservatory
     downstairs, it is triple aspect, full of light, and has
     magnificent vistas on every side. The huge level lawn beside
