--- a/index.html
+++ b/index.html
@@ -41,8 +41,11 @@
     <p>Ranscombe Holiday Cottage is a luxurious, self contained,
     self-catering property overlooking the beautiful communal
     gardens, pond area and orchards of The Manor, with stunning
-    countryside beyond.</p><video width="100%" controls=
-    ""><source src="droneview.webm" type="video/webm"></video>
+    countryside beyond.</p><iframe width="100%" height="500" src=
+    "https://www.youtube-nocookie.com/embed/7f1juLOQA8k?start=3"
+    title="YouTube video player" frameborder="0" allow=
+    "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen></iframe>
     <p>With its large open plan living room and conservatory
     downstairs, it is triple aspect, full of light, and has
     magnificent vistas on every side. The huge level lawn beside
